# alman

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  install.sh  uninstall.sh
src/: defaults.rs  main.rs  registry.rs  shell.rs  template.rs  tokenize.rs
src/cli/: cli_data.rs
src/database/: database_ops.rs  database_structs.rs  db.rs  history_loader.rs  mod.rs  persistence.rs  scoring.rs
src/mining/: miner.rs  mod.rs  scorer.rs
src/ops/: add_alias.rs  alias_ops.rs  alias_suggestions.rs  apply.rs  delete_suggestion.rs  get_suggestions.rs  insert_command.rs  mod.rs  remove_alias.rs
src/render/: mod.rs
src/tui/: app.rs  event_handler.rs  terminal.rs
src/tui/ui/: input_view.rs  main_view.rs  mod.rs  popup.rs
templates/: bash.txt  fish.txt  posix.txt  zsh.txt
